crates/nargo_cli/tests/compile_failure/bit_shift_right_overflow/src/main.nr
fn main() {
    // This should line should error as we will overflow the u32
    let b: u32 = 1 >> 32;
}
